Use String#formatted